--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,14 +13,11 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "lib": ["esnext", "dom"],
-    "types": ["vite/client"],
+    "types": ["vite/client","vite-plugin-svg-icons/client"],
     "paths": {
       "@/*": ["./src/*"]
     },
-    "compilerOptions": {
-      "types": ["vite-plugin-svg-icons/client"]
-    }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/shims-vue.d.ts"],
   "exclude": ["node_modules"]
 }
